Varied day of work

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -65,7 +65,8 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global and multifaceted effort has been made to respond to the epidemic.
-The response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
+The response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
+on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
 To give an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
 
 ```{r}
@@ -83,50 +84,56 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 
 <!-- The effort has translated into progress -->
 Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \@ref(fig:overall-picture)).
-The most significant evidence-based interventions, in chronological order, are described below:
+The most significant evidence-based interventions, in chronological order of their introduction, are described below:
 
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorrhoeae*, syphilis, and *Trichomonas vaginalis*.
 Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
-That said, there remain significant and difficult to close gaps in condom usage.
+There remain significant but difficult to close gaps in condom usage.
+
 * Antiretroviral therapy (ART) is a combination of drugs which stop the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
 Of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) in 2022, around `r coverage2022`% were accessing ART.
-A staggering `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths are estimated to have been averted by ART [@unaids2023global].
+The number of AIDS-related deaths, `r custom_numbers_to_words(art_deaths_averted)`, estimated to have been averted by ART is staggering [@unaids2023global].
+
 ART reduces the amount of virus in the blood and genital secretions.
 If the virus is undetectable then there is significant evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
 For this reason, in addition to providing life saving treatment, ART also operates as prevention.
+Approaches to lowering risk of HIV transmission using treatment are referred to as treatment as prevention (TaSP).
 Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
+
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
 Three landmark randomised control trials [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
+
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretrovial drugs which can be taken before and after exposure to prevent transmission.
 PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
 
-Though important progress had been made, there remains much more to do.
+Though important progress had been made, facilitated by the interventions above, there remains much more to do.
 In 2022, `r custom_numbers_to_words(infections2022)` people were newly infected with HIV and there were `r custom_numbers_to_words(deaths2022)` AIDS-related deaths, more than one every minute [@unaids2022global].
 Bold fast-track targets have been set to accelerate the end of AIDS as global public health threat by 2030.
-Renewed commitments are required to meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding [@economist2023triple].
+To meet these targets in the context of disruption to HIV services caused by the COVID-19 pandemic and a potential shortfall in HIV funding, renewed commitments are required [@economist2023triple].
 
-(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).
+(ref:naomi-continent) Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. The estimates from 2023 were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS, and are available from @unaids2023aidsinfo. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria were not published. Data collection in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results for the Democratic Republic of the Congo required removing some districts from the model.
 
 ```{r naomi-continent, fig.cap="(ref:naomi-continent)"}
 knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
 ```
 
 <!-- Prioritisation of interventions  -->
-For available resources to have the greatest impact, it is important that the right HIV interventions are prioritised to the right populations, in the right place, and at the right time.
-This paradigm has been described as precision public health [@khoury2016precision] at a population-level, by analogy to precision medicine at the individual-level.
-Differences in cost-effectiveness can be vast, with some interventions orders of magnitude more impactful than others [@ord2013moral].
+For available resources to have the greatest impact, it is important that the right HIV interventions to be prioritised to the right populations, in the right place, and at the right time.
+This paradigm has been termed precision public health [@khoury2016precision], by analogy to precision medicine.
+While precision medicine tailors treatment to the individual, precision public health tailors treatment to the population.
+Differences in the cost-effectiveness of any given intervention can be vast, with some interventions orders of magnitude more impactful than others [@ord2013moral].
 
 <!-- Uneven burden in space -->
 Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated in small populations, and national HIV prevalence is low.
 In others, the epidemic is sustained by heterosexual transmission, and national HIV prevalence is higher (typically >1%)
-These two epidemic settings are described as concentrated and generalised respectively [@tanser2014concentrated].
+These two epidemic settings are sometimes described as concentrated and generalised, respectively.
 Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` PLHIV worldwide live in SSA.
-Adult HIV prevalence (ages 15-49) is higher than 10% (Figure \@ref(fig:naomi-continent)) in some countries in southern Africa.
+Adult HIV prevalence (ages 15-49) is above than 10% (Figure \@ref(fig:naomi-continent)) in some countries in southern Africa, with some districts even exceeding 20%.
 Just as there is variation between countries, there is variation within countries.
 For example, adult HIV prevalence at the district municipality level in South Africa ranges from `r 6`% in Namakwa to `r 30`% in uMkhanyakude.
 
@@ -135,41 +142,58 @@ In all countries and contexts, some groups of people are at much higher risk tha
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
 Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2022key].
 KPs are often marginalised, and face legal and social barriers.
-In concentrated settings, the majority of new HIV infections occur in KPs and their sexual partners.
+Concentrated settings are defined by the majority of new HIV infections occurring in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
 For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing] but not typically considered a KP.
+That said, concentrated subepidemics often occur within what are nominally generalised settings [@tanser2014concentrated].
 
-<!-- Practical methods for prevention prioritisation: geographic, demographic, key population services, risk screening, individual-level risk characteristics. -->
+<!-- Practical methods for prevention prioritisation -->
+<!-- What is being done and is it working -->
+Modes of service delivery include geographic, demographic, key population services, risk screening, individual-level risk characteristics.
 
 ## HIV surveillance {#surveillance}
 
 <!-- What is surveillance and how can it be used to meet these needs -->
-HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV/AIDS.
+HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV [@pisani2003hiv].
 Surveillance can used to track epidemic indicators, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
 Important indicators include:
 
-* **HIV prevalence** is the proportion $\rho \in [0, 1]$ of the population who have HIV, typically written as a percentage.
-Both new infections and more PLHIV remaining alive by taking treatment increase HIV prevalence.
-As such, HIV prevalence should not be interpreted in isolation, and is primarily used indirectly to calculate other indicators.
-That said, in some circumstances when other indicators are difficult to estimate, HIV prevalence can be a useful proxy.
+* **HIV prevalence** is the proportion $\rho \in [0, 1]$ of a population who have HIV.
 The number of PLHIV is given by $N\rho$, where $N$ is the population size.
-* **HIV incidence** is the rate $\lambda \in \mathbb{R}$ of new HIV infections, typically written as number of new infections per 1000 person years.
-HIV incidence can be specified in terms of the change in HIV prevalence over some time period $\lambda = \Delta \rho / \Delta t$.
-Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence.
-The number of new HIV infections is given by $N (1 - \rho) \lambda$.
-* **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART, typically written as a percentage.
-Estimates of ART coverage play a direct role in the provision of treatment services.
-The number of people taking ART is given by $N \rho \alpha$.
+Increases in HIV prevalence, or the number of PLHIV, can be caused by either new HIV infections or more PLHIV remaining alive by taking treatment.
+For this reason care must be taken in directly interpreting changes in HIV prevalence.
+As a key measure of population disease burden, HIV prevalence is used to calculate all of the other indicators given below.
 
-<!-- * **Recently infected** -->
-<!-- * **Awareness of status** -->
+* **HIV incidence** is the rate $\lambda \in \mathbb{R}$ of new HIV infections, often written as number of new infections per 1000 person years.
+HIV incidence can be specified in terms of the change in HIV prevalence, taking into account the mortality rate.
+Let $\rho_t$ be the HIV prevalence, and $N_t$ be the population size, at time $t$.
+Then the number of new HIV infections is given by
+$$
+\int \lambda_t \cdot (1 - \rho_t) \cdot N_t \text{d}t.
+$$
+Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence and the number of new HIV infections.
 
-<!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
+* **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART.
+Estimates of ART coverage play a direct role in planning the provision of treatment services.
+The number of people taking ART is given by $N \cdot \rho \cdot \alpha$.
+
+* **Recent infection** is the proportion $\kappa \in [0, 1]$ of PLHIV who have been recently infected.
+Recent infection can be used to help estimate HIV incidence.
+
+* **Awareness of status** is the proportion $\xi \in [0, 1]$ of PLHIV who have been diagnosed with HIV.
+Programming of HIV testing and diagnosis is informed by awareness of status.
 
 ### Data
 
-What are the current data?
-What are the current approaches to using the data?
+Data are used to estimate the above HIV indicators.
+These data are integrated with prior scientific knowledge.
+Multiple sources of data are used:
+
+* **Household surveys**
+* **Programmatic data**
+* **Cohort studies**
+
+<!-- Discuss methods for HIV testing -->
 
 ### Challenges
 
@@ -178,7 +202,7 @@ The most significant difficulties faced are:
 
 1. **Data sparsity**:
 Collection of data is costly and time consuming.
-As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
+As a result, limited direct data might be available for the particular time, location, or population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
 4. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
@@ -209,19 +233,14 @@ Careful statistical modelling is required to overcome these limitations as best 
 
 1. **Borrowing information**:
 When little direct data are available, data judged to be indirectly related can be used to help improve estimation.
-For example, if limited data are available for individuals of a certain age is a particular country, it is likely reasonable to make use of data for individuals of a similar age in that country.
-As well as over age groups, information can be borrowed between and within countries, and across times. 
+For example, if limited data are available for individuals of a certain age, it is likely reasonable to make use of data for individuals of a similar age.
+As well as over age groups, information can be borrowed between and within countries, and across times.
 2. **Evidence synthesis**:
 Multiple sources of evidence can be combined to overcome the limitations of any one data source.
-For example, infrequently run household surveys can be complemented by up to date programmatic data.
+For example, infrequently run household surveys can be complemented by more up-to-date programmatic data.
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
 4. **Uncertainty quantification**:
-
-### Future directions
-
-Aims for HIV response going forward, and the surveillance capabilities needed to meet them:
-
-1. **Greater reliance on routine health system data**:
-It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. Patient-level HIV data systems [@world2017consolidated] and case-based surveillance (CBS). Integration of HIV services with other health programs and strengthening of health systems.
+Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
+It is therefore particularly that the uncertainties inherent to any statistical analysis are accurately and transparently presented.
