--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -8,6 +8,6 @@
 
 ## Comparison of AGHQ to NUTS
 
-## Additional simulation study results
+## Simulation study
 
-## Additional HIV study results
+## HIV study
