--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,6 +1,6 @@
 Progress towards ending AIDS as a public health threat by 2030 is not being made fast enough.
 Effective public health response requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
-Limitations of available data make obtaining these estimates difficult.
+Limitations of available data and statistical methodology make obtaining these estimates difficult.
 I developed and applied Bayesian spatio-temporal methods to meet this challenge.
 First, I examined models for area-level spatial structure.
 <!-- , finding that... -->
