--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -4,6 +4,7 @@ Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and 
 <!-- Boston: Lenni, Lenny, Simon, Janika, Frances, Geetha, Leilani, Tammy. -->
 Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
 Without Alex, Chapter \@ref(naomi-aghq) would never have gotten moving.
+Thanks to Håvard Rue and Finn Lindgren for helpful answers on the `R-INLA` discussion group.
 My sense for what matters has been shaped (arguably improved) by the Effective Altruism community.
 Thank you to the Meridian, Trajan, and LEAH offices for hosting me.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
