--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -28,6 +28,7 @@
 \item[UAT] Unlinked Anonymous Testing.
 \item[PMTCT] Prevention of Mother-to-Child Transmission.
 \item[PLHIV] People Living with HIV.
+\item[TaSP] Treatment as Prevention.
 
 \item[MCMC] Markov Chain Monte Carlo.
 \item[VI] Variational Inference.
