--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -66,22 +66,22 @@ This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
 The statistical approach is Bayesian because I use probability theory to arrive at conclusions based on models for observed data.
 
-(ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
+(ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
-The questions in this thesis relate to strategic information for planning the human immunodeficiency virus (HIV) epidemic response in sub-Saharan Africa (SSA).
+The applied focus of this thesis is in obtaining the strategic information needed to plan the response to the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
 Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
 Quantification of the epidemic using statistics is an important part of the public health response.
 Effective implementation of HIV prevention and treatment requires strategic information.
 However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
 
-The data I use were recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
+The data I use were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which each observation was recorded.
 Spatio-temporal data occur across a range of application settings.
-As well as being diverse, they do have distinctive recurring commonalities which make their collective study worthwhile.
+While diverse in setting, they have distinctive recurring commonalities which make their collective study worthwhile.
 The work conducted in this thesis makes use of, and aspires to contribute to, techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
