--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -12,42 +12,44 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Future work and conclusions {#conclusions}
+# Conclusions {#conclusions}
 \adjustmtc
 \markboth{Conclusions}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-<!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the Conclusions chapter [by far the most common point of examiner feedback] -->
+<!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the conclusions chapter [by far the most common point of examiner feedback] -->
 
 ## Strengths
 
-### Chapter \@ref(beyond-borders)
+* Chapter \@ref(beyond-borders) conducted thorough experiments to compare models for spatial structure using tools for model assessment such as proper scoring rules and posterior predictive checks.
 
-* I designed experiments to thoroughly compare models for spatial structure using tools for model assessment such as proper scoring rules and posterior predictive checks.
+* Chapter \@ref(multi-agyw) estimated HIV risk group proportions for AGYW, facilitating countries in SSA to prioritise their delivery of HIV prevention services.
+The number of new infections that might be reached under a variety of risk stratification strategies were analyzed.
+The `R-INLA` software was used to specify multinomial spatio-temporal models via the Poisson-multinomial transformation, including complex two- and three-way Kronecker product interactions.
 
-### Chapter \@ref(multi-agyw)
+* Chapter \@ref(naomi-aghq) developed a novel Bayesian inference method, motivated by a challenging and practically important problem in HIV surveillance.
 
-* I estimated HIV risk group proportions for AGYW, enabling countries to prioritise their delivery of HIV prevention services.
-* I analysed the number of new infections that might be reached under a variety of risk stratification strategies.
-* I used `R-INLA` to specify multinomial spatio-temporal models via the Poisson-multinomial transformation. This includes complex two- and three-way Kronecker product interactions defined using the `group` and `replicate` options.
-
-### Chapter \@ref(naomi-aghq)
-
-* I developed a novel Bayesian inference method, motivated by a challenging and practically important problem in HIV inference.
-* The method enables integrated nested Laplace approximations to be fit to and studied on a wider class of models than was previously possible.
-* My implementation of the method was straightforward, building on the `TMB` and `aghq` packages, and described completely and accessibly in @howes2023fast.
+## Weaknesses
 
 ## Future work
 
 Avenues for future work include:
 
-1. Extending the risk group model described in Chapter \@ref(multi-agyw) to include all adults 15-49. This may involve modelling of age-stratified sexual partnerships [@wolock2021evaluating].
+* Extending the risk group model described in Chapter \@ref(multi-agyw) to include all adults 15-49. This may involve modelling of age-stratified sexual partnerships [@wolock2021evaluating].
 Such a model would likely fall out of the scope of `R-INLA`, but would be possible to write with `TMB` and therefore amenable to the methods discussed in Chapter \@ref(naomi-aghq).
-2. Speeding up the implementation of Laplace marginals using the matrix algebra approximations described in @wood2020simplified.
-2. Evaluating the accuracy of deterministic Bayesian inference methods for a broader variety of extended latent Gaussian models.
 
 ## Conclusions
 
-* Modelling complex data, more often than not, pushes the boundaries of the statistical toolkit available.
-* A challenge I encountered was the difficulty of implementing identical models across multiple frameworks with the aim of studying the inference method. Or, of a similarly fraught nature, comparing different models implemented in different frameworks with the aim of studying model differences. The frequently asked questions section of the `R-INLA` website [@rinla2023faq] notes that "the devil is in the details". I have resolved this challenge by using a given `TMB` model template to fit models using multiple inference methodologies. The benefits of such a ecosystem of packages are noted by @stringer2021fields. I particularly highlight the benefit of enabling analysts to easily vary their choice of inference method based on the stage of model development that they are in.
-* To the best of my abilities, I have written this thesis, and the work described within it, in keeping with the principles of open science. I hope that doing so allows my work to be scrutinised, and optimistically built upon. This would not have been possible without a range of tools from the R ecosystem such as `rmarkdown` and `rticles`, as well as those developed within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
+* Modelling complex data often pushes on the boundaries of the available statistical toolkit.
+
+* A challenge encountered while conducting this research was the difficulty of implementing identical models across multiple frameworks, looking to study inference methods. Or, of a similarly fraught nature, comparing different models implemented in different frameworks, looking to study model differences. The frequently asked questions section of the `R-INLA` website [@rinla2023faq] notes that "the devil is in the details". I have resolved this challenge by using a given `TMB` model template to fit models using multiple inference methodologies. The benefits of such a ecosystem of packages are noted by @stringer2021fields. I particularly highlight the benefit of enabling analysts to easily vary their choice of inference method based on the stage of model development that they are in.
+
+* To the best of my abilities, this thesis, and the work described within it, was written in keeping with the principles of open science.
+I hope that doing so allows my work to be scrutinised, and optimistically built upon.
+This would not have been possible without a range of tools from the R ecosystem such as `rmarkdown` and `rticles`, as well as those developed within the MRC Centre for Global Infectious Disease Analysis such as `orderly` and `didehpc`.
+
+<!-- Aims for HIV response going forward, and the surveillance capabilities needed to meet them. -->
+<!-- Greater reliance on routine health system data. -->
+<!-- It is not recommended to include HIV testing in nationally representative household surveys in low (<2%) HIV prevalence settings [@world2005guidelines]. -->
+<!-- Patient-level HIV data systems [@world2017consolidated] and case-based surveillance (CBS). -->
+<!-- Integration of HIV services with other health programs and strengthening of health systems. -->
