--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -33,14 +33,14 @@ Add diagnostics here.
 
 ## Simplified Naomi model description {#naomi-math}
 
-This section describes the simplified version of the Naomi model [@eaton2021naomi] in complete detail.
-The more concise $i$ indexing used in Section \@ref(naomi) is replaced by more complete $x, s, a$ indexing.
+This section describes the simplified version of the Naomi model [@eaton2021naomi] in more detail.
+The concise $i$ indexing used in Section \@ref(naomi) is replaced by a more complete $x, s, a$ indexing.
 There are four sections:
 
 1. Section \@ref(naomi-process) gives the process specifications, giving the terms in each structured additive predictor, along with their distributions.
 2. Section \@ref(naomi-likelihood) gives additional details about the likelihood terms not provided in Section \@ref(naomi).
-3. Section \@ref(naomi-identifiability) gives identifiability constraints used in circumstances where incomplete data is available.
-4. Section \@ref(naomi-implementation) 
+3. Section \@ref(naomi-identifiability) gives identifiability constraints used in circumstances where incomplete data is available for the country.
+4. Section \@ref(naomi-implementation) provides details of the `TMB` implementation.
 
 ### Process specification {#naomi-process}
 
@@ -53,7 +53,7 @@ There are four sections:
 | \@ref(art-attend) | ART attendance     | $n$          | 1              |
 |                   | Total              | $51 + 14n$   | 24             |
 
-Table: (\#tab:process)
+Table: (\#tab:process) The Naomi model can be conceptualised as having five processes. This table gives the number of latent field parameters and hyperparameters in each process, where $n$ is the number of districts in the country.
 
 #### HIV prevalence {#hiv-prev}
 
@@ -83,10 +83,10 @@ and independent beta prior distributions for the two BYM2 proportion parameters
 | $\mathbf{u}_a^{\rho, s = \text{M}}$ | $\text{AR}1(\sigma_{AS}^\rho, \phi_{AS}^\rho)$  | Age random effects for the difference in logit prevalence for men compared to women age $a$                  |
 | $\mathbf{u}^\rho_x$              | $\text{BYM}2(\sigma_X^\rho, \phi_X^\rho)$       | Spatial random effects for women                                                                                |
 | $\mathbf{u}_x^{\rho, s = \text{M}}$ | $\text{BYM}2(\sigma_{XS}^\rho, \phi_{XS}^\rho)$ | Spatial random effects for the difference in logit prevalence for men compared to women in district $x$      |
-| $\mathbf{u}_x^{\rho, a < 15}$    | $\text{ICAR}(\sigma_{XA}^\rho)$                 | Spatial random effects for the ratio of paediatric prevalence to adult women prevalence                         |
-| $\boldsymbol{\mathbf{\eta}}^\rho_{R_x, s, a}$ | $-$                                | Fixed offsets specifying assumed odds ratios for prevalence outside the age ranges for which data were available, calculated from Spectrum model [@stover2019updates] outputs for region $R_x$ |
+| $\mathbf{u}_x^{\rho, a < 15}$    | $\text{ICAR}(\sigma_{XA}^\rho)$                 | Spatial random effects for the difference in logit paediatric prevalence to adult women prevalence in district $x$ |
+| $\boldsymbol{\mathbf{\eta}}^\rho_{R_x, s, a}$ | $-$                                | Fixed offsets specifying assumed odds ratios for prevalence outside the age ranges for which data were available. Calculated from Spectrum model [@stover2019updates] outputs for region $R_x$ |
 
-Table: (\#tab:prev)
+Table: (\#tab:prev) Each term in Equation \@ref(eq:prev) together with (where applicable) its prior distribution and a written description of its role.
 
 #### ART coverage {#art-cov}
 
@@ -108,13 +108,13 @@ Table \@ref(tab:inc) provides a description of the terms included in Equation \@
 |-----------------------------------|----------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | $\beta^\lambda_0$                 | $\mathcal{N}(0, 5)$              | Intercept term proportional to the average HIV transmission rate for untreated HIV positive adults                                                            |
 | $\beta_S^{\lambda, s = \text{M}}$ | $\mathcal{N}(0, 5)$              | The log incidence rate ratio for men compared to women                                                                                                        |
-| $\rho_{x}^{\text{15-49}}$         | $-$                              | The HIV prevalence among adults 15-49 calculated by aggregating age-specific HIV prevalences                                                                  |
-| $\alpha_{x}^{\text{15-49}}$       | $-$                              | The ART coverage among adults 15-49 calculated by aggregating age-specific ART coverages                                                                      |
+| $\rho_{x}^{\text{15-49}}$         | $-$                              | The HIV prevalence among adults 15-49 in district $x$ calculated by aggregating age-specific HIV prevalences                                                                  |
+| $\alpha_{x}^{\text{15-49}}$       | $-$                              | The ART coverage among adults 15-49 in district $x$ calculated by aggregating age-specific ART coverages                                                                      |
 | $\omega = 0.7$                    | $-$                              | Average reduction in HIV transmission rate per increase in population ART coverage fixed based on inputs to the Estimation and Projection Package (EPP) model |
 | $\mathbf{u}_x^\lambda$                   | $\mathcal{N}(0, \sigma^\lambda)$ | IID spatial random effects with $\sigma^\lambda \sim \mathcal{N}^+(0, 1)$                                                                              |
 | $\boldsymbol{\mathbf{\eta}}^\lambda_{R_x, s, a}$      | $-$          | Fixed log incidence rate ratios by sex and age group calculated from Spectrum model outputs for region $R_x$                                                                    |
 
-Table: (\#tab:inc)
+Table: (\#tab:inc) Each term in Equation \@ref(eq:inc) together with (where applicable) its prior distribution and a written description of its role.
 
 The proportion recently infected among HIV positive persons $\kappa_{x, s, a} \in [0, 1]$ was modelled as
 \begin{equation}
@@ -122,7 +122,8 @@ The proportion recently infected among HIV positive persons $\kappa_{x, s, a} \i
 \end{equation}
 where $\Omega_T \sim \mathcal{N}(\Omega_{T_0}, \sigma^{\Omega_T})$ is the mean duration of recent infection, and $\beta_T \sim \mathcal{N}^{+}(\beta_{T_0}, \sigma^{\beta_T})$ is the false recent ratio.
 The prior distribution for $\Omega_T$ was informed by the characteristics of the recent infection testing algorithm.
-For PHIA surveys this was $\Omega_{T_0} = 130 \text{ days}$ and $\sigma^{\Omega_T} = 6.12 \text{ days}$, and there was assumed to be no false recency, such that $\beta_{T_0} = 0.0$ and $\sigma^{\beta_T} = 0.0$.
+For PHIA surveys this was $\Omega_{T_0} = 130 \text{ days}$ and $\sigma^{\Omega_T} = 6.12 \text{ days}$.
+For PHIA surveys there was assumed to be no false recency, such that $\beta_{T_0} = 0.0$, $\sigma^{\beta_T} = 0.0$, and $\beta_T = 0$.
 
 #### ANC testing {#anc-test}
 
@@ -139,7 +140,7 @@ Table \@ref(tab:anc) provides a description of the terms included in Equation \@
 | $\mathbf{u}_x^{\theta^{\text{ANC}}}$    | $\mathcal{N}(0, \sigma_X^{\theta^{\text{ANC}}})$ | IID district random effects with $\sigma_X^{\theta^{\text{ANC}}} \sim \mathcal{N}^+(0, 1)$                                                                                                                     |
 | $\boldsymbol{\mathbf{\eta}}_{R_x, a}^{\theta^{\text{ANC}}}$ | $-$                          | Offsets for the log fertility rate ratios for HIV positive women compared to HIV negative women and for women on ART to HIV positive women not on ART, calculated from Spectrum model outputs for region $R_x$ |
 
-Table: (\#tab:anc)
+Table: (\#tab:anc) Each term in Equations \@ref(eq:anc1) and \@ref(eq:anc2) together with (where applicable) its prior distribution and a written description of its role. The notation $\theta$ is used as stand in for $\theta \in \{\rho, \alpha\}$.
 
 In the full Naomi model, for adult women 15-49 the number of ANC clients $\Psi_{x, a} > 0$ were modelled as
 \begin{equation}
@@ -158,29 +159,24 @@ logistic <- function(x) 1 / (1 + exp(-x))
 
 Let $\gamma_{x, x'} \in [0, 1]$ be the probability that a person on ART residing in district $x$ receives ART in district $x'$.
 Assume that $\gamma_{x, x'} = 0$ for $x \notin \{x, \text{ne}(x)\}$ such that individuals seek treatment only in their residing district or its neighbours $\text{ne}(x) = \{x': x' \sim x\}$, where $\sim$ is an adjacency relation, and $\sum_{x' \in \{x, \text{ne}(x)\}} \gamma_{x, x'} = 1$.
+
 The probabilities $\gamma_{x, x'}$ for $x \sim x'$ were modelled using multinomial logistic regression model, based on the log-odds ratios
 \begin{equation}
-\tilde \gamma_{x, x'} = \log \left( \frac{\gamma_{x, x'}}{1 - \gamma_{x, x'}} \right) = \tilde \gamma_0 + \mathbf{u}_x^{\tilde \gamma}, (\#eq:log-or)
+\tilde \gamma_{x, x'} = \log \left( \frac{\gamma_{x, x'}}{1 - \gamma_{x, x'}} \right) = \tilde \gamma_0 + \mathbf{u}_x^{\tilde \gamma}. (\#eq:log-or)
 \end{equation}
-where $\tilde \gamma_0 = -4$ is a fixed intercept, and $\mathbf{u}_x^{\tilde \gamma} \sim \mathcal{N}(0, \sigma_X^{\tilde \gamma})$ were district random effects with $\sigma_X^{\tilde \gamma} \sim \mathcal{N}^+(0, 2.5)$.
-Equation \@ref(eq:log-or) is independent of $x'$, such that $\gamma_{x, x'}$ is only a function of $x$.
-Choice of $\tilde \gamma_0 = -4$ implies a prior mean on $\gamma_{x, x'}$ of 1.8%, such that $(100 - 1.8 \times \text{ne}(x))\%$ of ART clients in district $x$ obtain treatment in their home district, a-priori.
-Fixing $\tilde \gamma_{x, x} = 0$ then the multinomial probabilities may be recoverd using the softmax
+Table \@ref(tab:log-or) provides a description of the terms included in Equation \@ref(eq:log-or).
+Fixing $\tilde \gamma_{x, x} = 0$ then the multinomial probabilities may be recovered using the softmax
 \begin{equation}
 \gamma_{x, x'} = \frac{\exp(\tilde \gamma_{x, x'})}{\sum_{x^\star \in \{x, \text{ne}(x)\}} \exp(\tilde \gamma_{x, x^\star})}.
 \end{equation}
-Given the total number of PLHIV on ART
-\begin{equation}
-A_{x, s, a} = N_{x, s, a} \cdot \rho_{x, s, a} \cdot \alpha_{x, s, a},
-\end{equation}
-the number of ART clients who reside in district $x$ and obtain ART in district $x'$ are
-\begin{equation}
-A_{x, x', s, a} = A_{x, s, a} \cdot \gamma_{x, x'},
-\end{equation}
-and the total attending ART facilities in district $x'$ are 
-\begin{equation}
-\tilde A_{x', s, a} = \sum_{x \in \{x', \text{ne}(x')\}} A_{x, x', s, a}.
-\end{equation}
+
+| Term                           | Distribution                               | Description                                                                         |
+|--------------------------------|--------------------------------------------|-------------------------------------------------------------------------------------|
+| $\tilde \gamma_0$              | $-$                                        | Fixed intercept $\tilde \gamma_0 = -4$. Implies a prior mean on $\gamma_{x, x'}$ of 1.8%, such that a-priori $(100 - 1.8 \times \text{ne}(x))\%$ of ART clients in district $x$ obtain treatment in their home district |
+| $\mathbf{u}_x^{\tilde \gamma}$ | $\mathcal{N}(0, \sigma_X^{\tilde \gamma})$ | District random effects, with $\sigma_X^{\tilde \gamma} \sim \mathcal{N}^+(0, 2.5)$ |
+
+Table: (\#tab:log-or) Each term in Equation \@ref(eq:log-or) and \@ref(eq:anc2) together with (where applicable) its prior distribution and a written description of its role.
+No terms include $x'$, such that $\gamma_{x, x'}$ is only a function of $x$.
 
 ### Additional likelihood specification {#naomi-likelihood}
 
