--- a/references.bib
+++ b/references.bib
@@ -2149,3 +2149,14 @@ doi = {10.1201/9781420072884-c30}
   journal={arXiv preprint arXiv:2106.07313},
   year={2021}
 }
+
+@article{pisani2003hiv,
+  title={HIV surveillance: a global perspective},
+  author={Pisani, Elizabeth and Lazzari, Stefano and Walker, Neff and Schwartl{\"a}nder, Bernhard},
+  journal={JAIDS Journal of Acquired Immune Deficiency Syndromes},
+  volume={32},
+  pages={S3--S11},
+  year={2003},
+  publisher={LWW}
+}
+
